--- a/manifests/g/GaijinNetwork/StarConflictLauncher/1.0.3.27/GaijinNetwork.StarConflictLauncher.installer.yaml
+++ b/manifests/g/GaijinNetwork/StarConflictLauncher/1.0.3.27/GaijinNetwork.StarConflictLauncher.installer.yaml
@@ -8,6 +8,7 @@ Installers:
   InstallerType: inno
   InstallerUrl: https://cdnnow-distr.gaijinent.com/starconf_launcher_1.0.3.27.exe
   InstallerSha256: A5B172E55BF7353ED94A9BA9CAA2D340DE3B2FB36A5691E835EED16FCC713C42
+  ProductCode: StarConflictLauncher_is1
 ManifestType: installer
 ManifestVersion: 1.0.0
 
