--- a/manifests/g/gajin/crossout/1.0.3.137/gajin.crossout.locale.en-US.yaml
+++ b/manifests/g/gajin/crossout/1.0.3.137/gajin.crossout.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 1.0.3.137
 PackageLocale: en-US
 Publisher: gajin
 PackageName: Crossout Launcher
-License: Copyright Â© 2016-2019 by Targem Inc. Â© 2011-2019 by Gaijin Entertainment
+License: Copyright © 2016-2019 by Targem Inc. © 2011-2019 by Gaijin Entertainment
 ShortDescription: Crossout is the post-apocalyptic MMO Action game, in which you can craft your unique battle machines from a myriad of interchangeable parts, ride them directly into combat and destroy your enemies in explosive PvP online battles!
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
