--- a/manifests/g/gajin/crossout/1.0.3.137/gajin.crossout.installer.yaml
+++ b/manifests/g/gajin/crossout/1.0.3.137/gajin.crossout.installer.yaml
@@ -8,6 +8,7 @@ Installers:
   InstallerType: inno
   InstallerUrl: https://aws-yup-distr-02.gaijinent.com/crossout_launcher_1.0.3.137.exe?distr=zx3pclokc
   InstallerSha256: DD0AD0CCD25BAC0EDD7849A9C624DAAFD439D6C30397894734DD7D86049B8FB9
+  ProductCode: CrossOutLauncher_is1
 ManifestType: installer
 ManifestVersion: 1.0.0
 
