--- a/manifests/v/Versa/MagiCut/1.1.2/Versa.MagiCut.installer.yaml
+++ b/manifests/v/Versa/MagiCut/1.1.2/Versa.MagiCut.installer.yaml
@@ -10,6 +10,7 @@ UpgradeBehavior: install
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.VC++2015-2019Redist-x64
+ProductCode: '{7FD1E7CF-6AF4-44CE-B0E0-0214D817CFF2}_is1'
 Installers:
 - Architecture: x64
   InstallerUrl: https://versa-static.oss-cn-shanghai.aliyuncs.com/pc/%E4%B8%8D%E5%92%95%E5%89%AA%E8%BE%91%E5%85%AC%E6%B5%8B%E7%89%881_1_2.exe
