--- a/manifests/3/360/360se/13.1.1708.0/360.360se.locale.en-US.yaml
+++ b/manifests/3/360/360se/13.1.1708.0/360.360se.locale.en-US.yaml
@@ -20,9 +20,9 @@ Description: 360 Safe Browser (360se) is a powerful, easy-to-use, fast and safe 
 Moniker: 360se
 Tags:
 - browser
-- chromium
-- ie
-- internet-explorer
+- Chromium
+- IE
+- Internet-Explorer
 - "360"
 - 360安全浏览器
 ManifestType: defaultLocale
