--- a/manifests/3/360/360se/13.1.1708.0/360.360se.locale.zh-CN.yaml
+++ b/manifests/3/360/360se/13.1.1708.0/360.360se.locale.zh-CN.yaml
@@ -22,9 +22,9 @@ Tags:
 - 浏览器
 - 网页浏览器
 - 极速浏览器
-- chromium
-- ie
-- internet-explorer
+- Chromium
+- IE
+- Internet-Explorer
 - "360"
 ManifestType: locale
 ManifestVersion: 1.0.0
