--- a/manifests/3/360/360se/13.1.1708.0/360.360se.installer.yaml
+++ b/manifests/3/360/360se/13.1.1708.0/360.360se.installer.yaml
@@ -27,7 +27,7 @@ FileExtensions:
 - shtml
 - xht
 - xhtml
-ProductCode: '360se6'
+ProductCode: 360se6
 Installers:
 - Architecture: x86
   InstallerUrl: https://down.360safe.com/se/360se13.1.1708.0.exe
