--- a/.github/ISSUE_TEMPLATE/manifest_request.yml
+++ b/.github/ISSUE_TEMPLATE/manifest_request.yml
@@ -3,6 +3,12 @@ description: Suggest a package for submission (this does not mean you have to im
 labels: ["Help-Wanted","Package-Request"]
 title: "[Package Request]: "
 body:
+  - type: markdown
+    attributes:
+      value: |
+        ### Important - Please read
+        > At this time installers must either be MSIX, MSI or .exe application installers.
+        > Standalone or portable executables, compressed .zip files, and fonts are not currently supported.
   - type: checkboxes
     attributes:
       label: Package Requested
@@ -10,6 +16,7 @@ body:
         - label: I would like someone else to build the manifest.
         - label: I would like help so I can submit the manifest.
         - label: I have performed a search and couldn't find this package.
+        - label: I have checked that the installer for this package is not a standalone or portable executable or a .zip file
         - label: I think there is a new version available and I have provided the URL.
   - type: textarea
     attributes:
