--- a/manifests/t/Tencent/TencentDocs/2.2.20/Tencent.TencentDocs.installer.yaml
+++ b/manifests/t/Tencent/TencentDocs/2.2.20/Tencent.TencentDocs.installer.yaml
@@ -7,6 +7,7 @@ MinimumOSVersion: 10.0.0.0
 InstallerType: nullsoft # electron-builder
 Scope: machine
 UpgradeBehavior: install
+ProductCode: TDAppDesktop
 Installers:
 - Architecture: neutral
   InstallerUrl: https://dldir1.qq.com/weiyun/tencentdocs/electron-update/release/TencentDocs2.2.20.30002.exe
