--- a/manifests/s/Savoir-FaireLinux/JamiBETA/1.0.7951.38132/Savoir-FaireLinux.JamiBETA.installer.yaml
+++ b/manifests/s/Savoir-FaireLinux/JamiBETA/1.0.7951.38132/Savoir-FaireLinux.JamiBETA.installer.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
-PackageIdentifier: Savoir-FaireLinux.JamiBETA
+PackageIdentifier: Savoir-FaireLinux.Jami.Beta
 PackageVersion: 1.0.7951.38132
 Installers:
 - InstallerLocale: en-US
