Update tags and descriptions

--- a/manifests/t/Tencent/TencentDocs/2.2.20/Tencent.TencentDocs.locale.en-US.yaml
+++ b/manifests/t/Tencent/TencentDocs/2.2.20/Tencent.TencentDocs.locale.en-US.yaml
@@ -15,20 +15,23 @@ License: Proprietary
 LicenseUrl: https://docs.qq.com/doc/DZHVMdVRPS0lQeWRD?pub=1&dver=2.1.0
 Copyright: Copyright © 2021 Tencent, Inc.
 CopyrightUrl: https://www.tencent.com/en-us/statement.html
-ShortDescription: Support multiple people to edit Word, Excel and PowerPoint documents online
-Description: Tencent Docs is a collaborative online document that allows multiple people to edit Word, Excel and PowerPoint documents simultaneously, and saves them in real time. It supports setting documents' accessing and editing permissions for QQ and WeChat friends, and provides multiple versions of Word, Excel and PPT document templates.
+ShortDescription: Online documentation for real-time multi-person collaboration
+Description: Tencent Docs is an online document service by Tencent that allowing editing online documents by multiple users simultaneously and providing various documents including docs, sheets, slides and forms. It covers multiple types of devices such as smartphone, computer and iPad, and runs directly in browser, WeChat and QQ so that you can work and learn anytime and anywhere, easily enhancing collaboration efficiency. It provides various templates such as health collection, check-in, meeting record, daily report, project management, etc. You can set viewing and editing permissions. Tencent will help protect your document’s security with its guarantees of technology.
 # Moniker: 
 Tags:
 - docs
-- word
-- excel
-- ppt
-- forms
-- document
+- documents
+- editor
+- editing
+- templates
 - office
-- online
+- team
 - collaboration
-- tencent
+- backup
+- sync
+- share
+- online
+- Tencent
 - 腾讯文档
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
