--- a/manifests/t/Tencent/TencentDocs/2.2.20/Tencent.TencentDocs.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/TencentDocs/2.2.20/Tencent.TencentDocs.locale.zh-CN.yaml
@@ -15,24 +15,23 @@ License: 专有软件
 LicenseUrl: https://docs.qq.com/doc/DZHVMdVRPS0lQeWRD?pub=1&dver=2.1.0
 Copyright: Copyright © 2021 Tencent, Inc.
 CopyrightUrl: https://www.tencent.com/zh-cn/statement.html
-ShortDescription: 支持多人在线编辑 Word、Excel 和 PPT 文档
-Description: 腾讯文档是一款可多人协作的在线文档，可同时编辑 Word、Excel 和 PPT 文档，云端实时保存。可针对 QQ、微信好友设置文档访问、编辑权限，支持多种版本 Word、Excel 和 PPT 文档模板。
+ShortDescription: 可多人实时协作的在线文档
+Description: 腾讯文档是腾讯出品的一款可多人同时编辑的在线文档，提供文档/表格/幻灯片/收集表多种文档类型。支持手机、电脑、iPad 等多类型设备，并可在网页，微信和 QQ 内直接使用。随时随地办公和学习，轻松提升协作效率。提供健康收集、打卡签到、会议纪要、日报、项目管理等各类模板。可设置他人的查看及编辑权限，更有腾讯技术保障，为你的文档安全上双保险！
 # Moniker: 
 Tags:
 - 文档
+- 编辑
 - 模板
 - 办公
+- 团队
 - 协作
 - 协同
 - 备份
 - 同步
-- 编辑
 - 共享
 - 分享
-- 团队
-- 多人
 - 在线
 - 腾讯
-- tencent
+- Tencent
 ManifestType: locale
 ManifestVersion: 1.0.0
