--- a/manifests/s/SolidClouds/Starborne/1.3.153/SolidClouds.Starborne.installer.yaml
+++ b/manifests/s/SolidClouds/Starborne/1.3.153/SolidClouds.Starborne.installer.yaml
@@ -11,6 +11,6 @@ Installers:
   InstallerType: exe
   InstallerUrl: https://starbornecdn.azureedge.net/files/installers/StarborneInstaller.exe
   InstallerSha256: 8764CD2DB6BA05560A90B5C9E4D659C051875119F37CC8A05A8353CE22AE9695
-ManifestType: installer
+ManifestType: Inno
 ManifestVersion: 1.0.0
 
