--- a/manifests/s/SolidClouds/Starborne/1.3.153/SolidClouds.Starborne.installer.yaml
+++ b/manifests/s/SolidClouds/Starborne/1.3.153/SolidClouds.Starborne.installer.yaml
@@ -8,7 +8,7 @@ InstallerSwitches:
   SilentWithProgress: True
 Installers:
 - Architecture: x86
-  InstallerType: NullSoft
+  InstallerType: nullsoft
   InstallerUrl: https://starbornecdn.azureedge.net/files/installers/StarborneInstaller.exe
   InstallerSha256: 8764CD2DB6BA05560A90B5C9E4D659C051875119F37CC8A05A8353CE22AE9695
 ManifestType: installer
