New version: RevoUninstaller.RevoUninstaller version 2.3.5

--- a/manifests/r/RevoUninstaller/RevoUninstaller/2.3.5/RevoUninstaller.RevoUninstaller.installer.yaml
+++ b/manifests/r/RevoUninstaller/RevoUninstaller/2.3.5/RevoUninstaller.RevoUninstaller.installer.yaml
@@ -1,19 +1,20 @@
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: RevoUninstaller.RevoUninstaller
-PackageVersion: 2.3.0
+PackageVersion: 2.3.5
+InstallerLocale: en-US
 MinimumOSVersion: 10.0.0.0
+InstallerType: inno
+Scope: machine
 InstallModes:
 - interactive
 - silent
 - silentWithProgress
+UpgradeBehavior: install
 Installers:
-- InstallerLocale: en-US
-  Architecture: x64
-  InstallerType: inno
-  Scope: machine
+- Architecture: x64
   InstallerUrl: https://download.revouninstaller.com/revosetup.exe
-  InstallerSha256: 9583FD79A32A05D0E007E5F13A60BC04BEA0644422DAD32767CF87F9994D888C
-  UpgradeBehavior: install
+  InstallerSha256: 6EE88BBEABA920963E341790F802B7BB0ECFEC92FC64F3F1B9533CD88AB05DAF
 ManifestType: installer
 ManifestVersion: 1.0.0
