--- a/manifests/r/RevoUninstaller/RevoUninstaller/2.3.5/RevoUninstaller.RevoUninstaller.locale.en-US.yaml
+++ b/manifests/r/RevoUninstaller/RevoUninstaller/2.3.5/RevoUninstaller.RevoUninstaller.locale.en-US.yaml
@@ -1,7 +1,8 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: RevoUninstaller.RevoUninstaller
-PackageVersion: 2.3.0
+PackageVersion: 2.3.5
 PackageLocale: en-US
 Publisher: VS Revo Group, Ltd.
 PublisherUrl: https://www.revouninstaller.com
