--- a/manifests/r/RevoUninstaller/RevoUninstaller/2.3.5/RevoUninstaller.RevoUninstaller.installer.yaml
+++ b/manifests/r/RevoUninstaller/RevoUninstaller/2.3.5/RevoUninstaller.RevoUninstaller.installer.yaml
@@ -3,7 +3,8 @@
 
 PackageIdentifier: RevoUninstaller.RevoUninstaller
 PackageVersion: 2.3.5
-InstallerLocale: en-US
+Platform:
+- Windows.Desktop
 MinimumOSVersion: 10.0.0.0
 InstallerType: inno
 Scope: machine
