--- a/manifests/g/GlassWire/GlassWire/Lite/2.3.359/GlassWire.GlassWire.Lite.installer.yaml
+++ b/manifests/g/GlassWire/GlassWire/Lite/2.3.359/GlassWire.GlassWire.Lite.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: GlassWire.GlassWire.Lite
-PackageVersion: 2.3.343
+PackageVersion: 2.3.359
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
@@ -11,13 +11,13 @@ Scope: machine
 InstallModes:
 - interactive
 - silent
+UpgradeBehavior: install
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.VC++2017Redist-x86
-UpgradeBehavior: install
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.glasswire.com/GlassWireLiteSetup.exe
-  InstallerSha256: B79A5C6141EAC319B939867C8A1F8CFD2999EF9024E0A50B8D3BC52962D7DEFB
+  InstallerSha256: 60B7341C668012A66965A5D34FE92FBBC5AF158DFBB551D968F4C09931209804
 ManifestType: installer
 ManifestVersion: 1.0.0
