New version: GlassWire.GlassWire version 2.3.359

--- a/manifests/g/GlassWire/GlassWire/2.3.359/GlassWire.GlassWire.installer.yaml
+++ b/manifests/g/GlassWire/GlassWire/2.3.359/GlassWire.GlassWire.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: GlassWire.GlassWire
-PackageVersion: 2.3.343
+PackageVersion: 2.3.359
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
@@ -17,6 +17,6 @@ Dependencies:
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.glasswire.com/GlassWireSetup.exe
-  InstallerSha256: 48748BB5CF39E3899D01DB6F077224639B46778E62D9209A2E5B61DE41CE2790
+  InstallerSha256: 602E47B981C87833C50827FDDA4A65181545F34200294D5F52B3A1A2CB447D76
 ManifestType: installer
 ManifestVersion: 1.0.0
