--- a/manifests/a/Anydo/Anydo/4.2.158/Anydo.Anydo.installer.yaml
+++ b/manifests/a/Anydo/Anydo/4.2.158/Anydo.Anydo.installer.yaml
@@ -1,20 +1,20 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Anydo.Anydo
-PackageVersion: 4.2.157
+PackageVersion: 4.2.158
+InstallerLocale: en-US
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
+InstallerType: nullsoft
+Scope: user
 InstallModes:
 - silent
+UpgradeBehavior: install
 Installers:
-- InstallerLocale: en-US
-  Architecture: x64
-  InstallerType: nullsoft
-  Scope: user
+- Architecture: x64
   InstallerUrl: https://electron-app.any.do/_windows/Any.do.exe
-  InstallerSha256: 6CB25E5D32EFB09C93D550C4C5D8F73DE122D1154E9DA26976127A15C2B88076
-  UpgradeBehavior: install
+  InstallerSha256: 95FF493AF926DAFFDF2AD32AD613A53636B0D5799C17DBEA636406EBFA268929
 ManifestType: installer
 ManifestVersion: 1.0.0
