--- a/manifests/a/AIMP/AIMP/v5.00.2338, 21.10.2021/AIMP.AIMP.locale.en-US.yaml
+++ b/manifests/a/AIMP/AIMP/v5.00.2338, 21.10.2021/AIMP.AIMP.locale.en-US.yaml
@@ -1,11 +1,13 @@
-# Created using wingetcreate
+# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: AIMP.AIMP
-PackageVersion: v5.00.2335, 15.10.2021
+PackageVersion: v5.00.2338, 21.10.2021
 PackageLocale: en-US
 Publisher: AIMP DevTeam
 PublisherUrl: https://www.aimp.ru
 PublisherSupportUrl: https://www.aimp.ru/forum/index.php
+# PrivacyUrl: 
 Author: Artem Izmaylov
 PackageName: AIMP
 PackageUrl: https://www.aimp.ru
@@ -14,6 +16,7 @@ LicenseUrl: https://www.aimp.ru/files/windows/EULA_lang-en.txt
 Copyright: © Artem Izmaylov 2006-2021 | All rights reserved
 CopyrightUrl: https://www.aimp.ru/files/windows/EULA_lang-en.txt
 ShortDescription: AIMP is a freeware audio player
+# Description: 
 Moniker: aimp
 Tags:
 - audio-player
