--- a/manifests/z/Zoom/Zoom/OutlookPlugin/5.8.3/Zoom.Zoom.OutlookPlugin.locale.en-US.yaml
+++ b/manifests/z/Zoom/Zoom/OutlookPlugin/5.8.3/Zoom.Zoom.OutlookPlugin.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherUrl: https://zoom.us
 PrivacyUrl: https://zoom.us/en-us/trust/privacy.html
 Author: Zoom
 PackageName: Zoom Outlook Plugin
-PackageUrl: https://support.zoom.us/hc/en-us/articles/200881399-Microsoft-Outlook-Plugin-Desktop-
+# PackageUrl: https://support.zoom.us/hc/en-us/articles/200881399-Microsoft-Outlook-Plugin-Desktop-
 License: Proprietary
 LicenseUrl: https://zoom.us/terms
 Copyright: Copyright ©2021 Zoom Video Communications, Inc. All rights reserved.
