--- a/manifests/a/AlexKaul/Freeter/1.2.1/AlexKaul.Freeter.locale.en-US.yaml
+++ b/manifests/a/AlexKaul/Freeter/1.2.1/AlexKaul.Freeter.locale.en-US.yaml
@@ -8,7 +8,7 @@ Publisher: Alex Kaul
 PublisherUrl: https://freeter.io/download
 PrivacyUrl: https://freeter.io/privacy
 Author: Alex Kaul
-PackageName: Freeter for Windows
+PackageName: Freeter
 PackageUrl: https://freeter.io
 License: Copyright © 2017 Alex Kaul
 ShortDescription: The smartest way to work on your projects
