Apply suggestions from code review
Co-authored-by: Levvie - she/her <11600822+ItzLevvie@users.noreply.github.com>

--- a/manifests/c/Canonical/Multipass/1.8.0/Canonical.Multipass.installer.yaml
+++ b/manifests/c/Canonical/Multipass/1.8.0/Canonical.Multipass.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Canonical.Multipass
-PackageVersion: 1.8.0
+PackageVersion: 1.8.0+win
 MinimumOSVersion: 10.0.17134.0
 InstallerType: nullsoft
 Scope: machine
