--- a/manifests/c/Canonical/Multipass/1.8.0/Canonical.Multipass.locale.en-US.yaml
+++ b/manifests/c/Canonical/Multipass/1.8.0/Canonical.Multipass.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Canonical.Multipass
-PackageVersion: 1.8.0
+PackageVersion: 1.8.0+win
 PackageLocale: en-US
 Publisher: canonical
 PublisherUrl: https://canonical.com/
