--- a/manifests/c/Canonical/Multipass/1.8.0/Canonical.Multipass.yaml
+++ b/manifests/c/Canonical/Multipass/1.8.0/Canonical.Multipass.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: Canonical.Multipass
-PackageVersion: 1.8.0
+PackageVersion: 1.8.0+win
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
