--- a/manifests/x/Xanthus58/XansBetterVanilla/2.1.5/Xanthus58.XansBetterVanilla.locale.en-US.yaml
+++ b/manifests/x/Xanthus58/XansBetterVanilla/2.1.5/Xanthus58.XansBetterVanilla.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: Xanthus58.XansBetterVanilla
 PackageVersion: 2.1.5
 PackageLocale: en-US
-Publisher: Xanthus58
+Publisher: Xanthsu58
 PackageName: Xans Better Vanilla
 License: MIT License
 ShortDescription: Better vanilla is a Res pack for Minecraft that intends to optimize, improve quality of live, and fix the game in various ways. Optifine is required for the intended experience.
