--- a/manifests/t/Twitch/Soundtrack/8.0.0.0/Twitch.Soundtrack.locale.en-US.yaml
+++ b/manifests/t/Twitch/Soundtrack/8.0.0.0/Twitch.Soundtrack.locale.en-US.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
-PackageIdentifier: TwitchInteractive,Inc.SoundtrackbyTwitch
+PackageIdentifier: Twitch.Soundtrack
 PackageVersion: 8.0.0.0
 PackageLocale: en-US
 Publisher: Twitch Interactive, Inc.
