--- a/manifests/t/Twitch/Soundtrack/8.0.0.0/Twitch.Soundtrack.yaml
+++ b/manifests/t/Twitch/Soundtrack/8.0.0.0/Twitch.Soundtrack.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
-PackageIdentifier: TwitchInteractive,Inc.SoundtrackbyTwitch
+PackageIdentifier: Twitch.Soundtrack
 PackageVersion: 8.0.0.0
 DefaultLocale: en-US
 ManifestType: version
