--- a/manifests/t/Twitch/Soundtrack/8.0.0.0/Twitch.Soundtrack.installer.yaml
+++ b/manifests/t/Twitch/Soundtrack/8.0.0.0/Twitch.Soundtrack.installer.yaml
@@ -4,8 +4,9 @@
 PackageIdentifier: Twitch.Soundtrack
 PackageVersion: 8.0.0.0
 InstallerSwitches:
-  Silent: true
-  SilentWithProgress: false
+  Silent: /silent
+  SilentWithProgress: /silent
+  Custom: /nolaunch
 Installers:
 - Architecture: x86
   InstallerType: exe
