--- a/manifests/t/Twitch/Soundtrack/8.0.0/Twitch.Soundtrack.installer.yaml
+++ b/manifests/t/Twitch/Soundtrack/8.0.0/Twitch.Soundtrack.installer.yaml
@@ -10,7 +10,7 @@ InstallerSwitches:
 Installers:
 - Architecture: x86
   InstallerType: exe
-  InstallerUrl: https://live.release.radio.twitchsvc.net/installer/windows/twitchsoundtracksetup.exe?context=[usher-214743029][referrer-soundtrack_page]
+  InstallerUrl: https://radio-assets.twitchcdn.net/installer/TwitchSoundtrackSetup.55dc5c6f704f21e9c9c4f63249cd634a.exe
   InstallerSha256: 9A2D9550FC0F594ECDD67AAC8135E0203BBBB80C0940377B355AD9A8E9AC991A
 ManifestType: installer
 ManifestVersion: 1.0.0
