--- a/manifests/t/Twitch/Soundtrack/8.0.0/Twitch.Soundtrack.installer.yaml
+++ b/manifests/t/Twitch/Soundtrack/8.0.0/Twitch.Soundtrack.installer.yaml
@@ -7,8 +7,9 @@ InstallerSwitches:
   Silent: /silent
   SilentWithProgress: /silent
   Custom: /nolaunch
+Scope: user
 Installers:
-- Architecture: x86
+- Architecture: x64
   InstallerType: exe
   InstallerUrl: https://radio-assets.twitchcdn.net/installer/TwitchSoundtrackSetup.55dc5c6f704f21e9c9c4f63249cd634a.exe
   InstallerSha256: 9A2D9550FC0F594ECDD67AAC8135E0203BBBB80C0940377B355AD9A8E9AC991A
