--- a/manifests/t/TTKN/CAJViewer/7.3.1/TTKN.CAJViewer.installer.yaml
+++ b/manifests/t/TTKN/CAJViewer/7.3.1/TTKN.CAJViewer.installer.yaml
@@ -1,9 +1,21 @@
-# Created using YamlCreate.ps1 v1.1.6
+# Created with YamlCreate.ps1 v2.0.0 $debug=MDSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: TTKN.CAJViewer
 PackageVersion: 7.3.1
 MinimumOSVersion: 10.0.0.0
+InstallerType: exe
+Scope: machine
+InstallModes:
+- interactive
+- silent
+- silentWithProgress
+InstallerSwitches:
+  Silent: /C:"msiexec /i ""CAJViewer 7.3.msi"" /quiet /norestart"
+  SilentWithProgress: /C:"msiexec /i ""CAJViewer 7.3.msi"" /passive /norestart"
+InstallerSuccessCodes:
+- 3010
+UpgradeBehavior: uninstallPrevious
 FileExtensions:
 - caj
 - kdh
@@ -11,28 +23,10 @@ FileExtensions:
 - pdf
 - nh
 - caa
-- url
-Commands:
-- CAJVieweru
-InstallerSuccessCodes:
-- 3010
-UpgradeBehavior: uninstallPrevious
-InstallModes:
-- interactive
-- silent
-- silentWithProgress
+ProductCode: '{38CE8FAD-2E31-4CA8-B671-1BA7A8A54B28}'
 Installers:
-- InstallerLocale: zh-CN
-  Architecture: x86
-  InstallerType: exe
-  Scope: machine
+- Architecture: x86
   InstallerUrl: https://download.cnki.net/CAJViewer%207.3.141.self.exe
   InstallerSha256: 9DB367042194AF80C40E2E618F0E420528DE3C5098315B4BA1DAF9855F3747A0
-  InstallerSwitches:
-    Silent: /C:"msiexec /i ""CAJViewer 7.3.msi"" /quiet /norestart"
-    SilentWithProgress: /C:"msiexec /i ""CAJViewer 7.3.msi"" /passive /norestart"
-  ProductCode: '{38CE8FAD-2E31-4CA8-B671-1BA7A8A54B28}'
-  UpgradeBehavior: install
 ManifestType: installer
 ManifestVersion: 1.0.0
-
