--- a/manifests/t/TTKN/CAJViewer/7.3.1/TTKN.CAJViewer.locale.zh-CN.yaml
+++ b/manifests/t/TTKN/CAJViewer/7.3.1/TTKN.CAJViewer.locale.zh-CN.yaml
@@ -1,29 +1,27 @@
-# Created using YamlCreate.ps1 v1.1.6
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
+# Created with YamlCreate.ps1 v2.0.0 $debug=MDSU.7-1-5
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.0.0.schema.json
 
 PackageIdentifier: TTKN.CAJViewer
 PackageVersion: 7.3.1
 PackageLocale: zh-CN
-Publisher: 同方知网（北京）技术有限公司
-PublisherUrl: https://cajviewer.cnki.net
-#PublisherSupportUrl: 
-#PrivacyUrl: 
-#Author: 
+Publisher: TTKN
+PublisherUrl: https://cajviewer.cnki.net/
+PublisherSupportUrl: https://cajviewer.cnki.net/question.html
+# PrivacyUrl: 
+Author: 同方知网（北京）技术有限公司
 PackageName: CAJViewer
-PackageUrl: https://cajviewer.cnki.net
-License: Freeware
-#LicenseUrl: 
+PackageUrl: https://cajviewer.cnki.net/
+License: 免费软件
+# LicenseUrl: 
 Copyright: 版权所有 (C) TTKN Corp.
-#CopyrightUrl: 
-ShortDescription: 用于阅读和编辑CNKI系列数据库文献的专用阅读器
-#Description: 
+# CopyrightUrl: 
+ShortDescription: 用于阅读和编辑 CNKI 系列数据库文献的专用阅读器
+Description: CAJ 全文浏览器是中国期刊网的专用全文格式浏览器，支持中国期刊网的 TEB、CAJ、NH、KDH 和 PDF 格式文件。可配合网上原文的阅读，也可以阅读下载后的中国期刊网全文，并且打印效果与原版的效果一致。
+# Moniker: 
 Tags:
 - caj
-- kdh
-- teb
-- nh
-- caa
+- 阅读器
+- 知网
 - cnki
-ManifestType: defaultLocale
+ManifestType: locale
 ManifestVersion: 1.0.0
-
