--- a/manifests/s/Sigil-Ebook/Sigil/1.8.0/Sigil-Ebook.Sigil.installer.yaml
+++ b/manifests/s/Sigil-Ebook/Sigil/1.8.0/Sigil-Ebook.Sigil.installer.yaml
@@ -12,6 +12,9 @@ InstallModes:
 - silent
 - silentWithProgress
 UpgradeBehavior: install
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.VC++2015-2019Redist-x64
 FileExtensions:
 - epub
 Installers:
