--- a/manifests/g/GitHub/GitLFS/3.0.1/GitHub.GitLFS.locale.en-US.yaml
+++ b/manifests/g/GitHub/GitLFS/3.0.1/GitHub.GitLFS.locale.en-US.yaml
@@ -17,7 +17,7 @@ Copyright: Copyright (c) 2014-2021 GitHub, Inc. and Git LFS contributors
 CopyrightUrl: https://github.com/git-lfs/git-lfs/raw/main/LICENSE.md
 ShortDescription: Git Large File Storage is a command line extension and specification for managing large files with Git.
 # Description: 
-# Moniker: gitlfs
+Moniker: gitlfs
 Tags:
 - go
 - golang
