--- a/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.installer.yaml
+++ b/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.installer.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
-PackageIdentifier: OpenJS.NodeJS
+PackageIdentifier: OpenJS.NodeJS.LTS
 PackageVersion: 16.13.0
 Platform:
 - Windows.Desktop
