--- a/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.locale.en-US.yaml
+++ b/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.locale.en-US.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
-PackageIdentifier: OpenJS.NodeJS
+PackageIdentifier: OpenJS.NodeJS.LTS
 PackageVersion: 16.13.0
 PackageLocale: en-US
 Publisher: Node.js Foundation
@@ -12,9 +12,9 @@ Author: OpenJS Foundation
 PackageName: Node.js
 PackageUrl: https://nodejs.org/en/
 License: Copyright (c) Joyent, Inc. and other Node contributors. All rights reserved.
-LicenseUrl: https://raw.githubusercontent.com/nodejs/node/v16.6.0/LICENSE
+LicenseUrl: https://raw.githubusercontent.com/nodejs/node/v16.13.0/LICENSE
 Copyright: Copyright (c) Joyent, Inc. and other Node contributors. All rights reserved.
-CopyrightUrl: https://raw.githubusercontent.com/nodejs/node/v16.6.0/LICENSE
+CopyrightUrl: https://raw.githubusercontent.com/nodejs/node/v16.13.0/LICENSE
 ShortDescription: Node.js is a JavaScript runtime built on Chrome"s V8 JavaScript engine.
 Description: Node.js is a JavaScript runtime built on Chrome"s V8 JavaScript engine. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient. Node.js" package ecosystem, npm, is the largest ecosystem of open source libraries in the world.
 Moniker: nodejs
