Apply suggestions from code review
Co-authored-by: Esco <OfficialEsco@users.noreply.github.com>

--- a/manifests/f/FlockFZLLC/Flock/2.2.506.452/FlockFZLLC.Flock.installer.yaml
+++ b/manifests/f/FlockFZLLC/Flock/2.2.506.452/FlockFZLLC.Flock.installer.yaml
@@ -1,8 +1,8 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
-PackageIdentifier: FlockFZLLC.Flock
-PackageVersion: 2.2.506.452
+PackageIdentifier: FlockFZ.Flock
+PackageVersion: 2.2.506
 Installers:
 - Architecture: x86
   InstallerType: nullsoft
