--- a/manifests/f/FlockFZLLC/Flock/2.2.506.452/FlockFZLLC.Flock.locale.en-US.yaml
+++ b/manifests/f/FlockFZLLC/Flock/2.2.506.452/FlockFZLLC.Flock.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
-PackageIdentifier: FlockFZLLC.Flock
-PackageVersion: 2.2.506.452
+PackageIdentifier: FlockFZ.Flock
+PackageVersion: 2.2.506
 PackageLocale: en-US
 Publisher: Flock FZ LLC
 PackageName: Flock
