Apply suggestions from code review
Co-authored-by: Levvie - she/her <11600822+ItzLevvie@users.noreply.github.com>

--- a/manifests/s/Savoir-FaireLinux/Jami/Beta/1.0.7951.38132/Savoir-FaireLinux.Jami.Beta.locale.en-US.yaml
+++ b/manifests/s/Savoir-FaireLinux/Jami/Beta/1.0.7951.38132/Savoir-FaireLinux.Jami.Beta.locale.en-US.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
-PackageIdentifier: Savoir-FaireLinux.Jami.Beta
+PackageIdentifier: SFLinux.Jami.Beta
 PackageVersion: 1.0.7951.38132
 PackageLocale: en-US
 Publisher: Savoir-Faire Linux
