--- a/manifests/s/Savoir-FaireLinux/Jami/Beta/1.0.7951.38132/Savoir-FaireLinux.Jami.Beta.yaml
+++ b/manifests/s/Savoir-FaireLinux/Jami/Beta/1.0.7951.38132/Savoir-FaireLinux.Jami.Beta.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
-PackageIdentifier: Savoir-FaireLinux.Jami.Beta
+PackageIdentifier: SFLinux.Jami.Beta
 PackageVersion: 1.0.7951.38132
 DefaultLocale: en-US
 ManifestType: version
