Added dependencies for MySQL version 8.0.27.

--- a/manifests/o/Oracle/MySQL/8.0.27/Oracle.MySQL.installer.yaml
+++ b/manifests/o/Oracle/MySQL/8.0.27/Oracle.MySQL.installer.yaml
@@ -15,8 +15,11 @@ Installers:
   InstallerSha256: F2E0728F621CE53829C013FE1618CFE6B4B23185F704D8AEF50C7F4F78684D8B
   ProductCode: "{D4B00A5F-F7CC-42F0-A4C0-1AF86983E916}"
   InstallerSwitches:
-    Custom: CONSOLEARGS="install -type=Full -silent"
+    Custom: CONSOLEARGS="install -type=Developer -silent"
   UpgradeBehavior: install
+  Dependencies:
+    PackageDependencies:
+      - PackageIdentifier: Microsoft.VC++2015-2019Redist-x64
 ManifestType: installer
 ManifestVersion: 1.0.0
 
