Update and rename manifests/e/ESET/ESETEndpoint/Antivirus/8.1.2037.2/ESET.ESETEndpoint.Antivirus.installer.yaml to manifests/e/ESET/EndpointAntivirus/8.1.2037.2/ESET.EndpointAntivirus.installer.yaml

--- a/manifests/e/ESET/EndpointAntivirus/8.1.2037.2/ESET.EndpointAntivirus.installer.yaml
+++ b/manifests/e/ESET/EndpointAntivirus/8.1.2037.2/ESET.EndpointAntivirus.installer.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.0.3
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
-PackageIdentifier: ESET.ESETEndpoint.Antivirus
+PackageIdentifier: ESET.EndpointAntivirus
 PackageVersion: 8.1.2037.2
 Installers:
 - InstallerLocale: en-US
