--- a/manifests/n/NewBreedSoftware/TuxPaint/Stamps/2018.09.01/NewBreedSoftware.TuxPaint.Stamps.yaml
+++ b/manifests/n/NewBreedSoftware/TuxPaint/Stamps/2018.09.01/NewBreedSoftware.TuxPaint.Stamps.yaml
@@ -5,6 +5,8 @@ Publisher: New Breed Software
 License: GNU General Public License
 LicenseUrl: http://www.tuxpaint.org/docs/COPYING.txt
 PackageUrl: http://www.tuxpaint.org/
+PackageDependencies:
+  - PackageIdentifier: NewBreedSoftware.TuxPaint
 Installers:
 - Architecture: x86
   InstallerUrl: https://sourceforge.net/projects/tuxpaint/files/tuxpaint-stamps/2018-09-01/tuxpaint-stamps-2018-09-01-win32-installer.exe/download
