Added BellSoft LibericaJDK 17.0.1.12

--- a/manifests/b/BellSoft/LibericaJDK/17/17.0.1.12/BellSoft.LibericaJDK.17.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/17/17.0.1.12/BellSoft.LibericaJDK.17.yaml
@@ -1,4 +1,4 @@
-PackageIdentifier: BellSoft.LibericaJDK17
+PackageIdentifier: BellSoft.LibericaJDK.17
 PackageName: Liberica JDK 17
 PackageVersion: 17.0.1.12
 Moniker: liberica-jdk17
