Added BellSoft LibericaJDK 11.0.13.8

--- a/manifests/b/BellSoft/LibericaJDK/11/11.0.13.8/BellSoft.LibericaJDK.11.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/11/11.0.13.8/BellSoft.LibericaJDK.11.yaml
@@ -1,4 +1,4 @@
-PackageIdentifier: BellSoft.LibericaJDK11
+PackageIdentifier: BellSoft.LibericaJDK.11
 PackageName: Liberica JDK 11
 PackageVersion: 11.0.13.8
 Moniker: liberica-jdk11
