Added BellSoft LibericaJDK 8.0.312.7

--- a/manifests/b/BellSoft/LibericaJDK/8/8.0.312.7/BellSoft.LibericaJDK.8.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/8/8.0.312.7/BellSoft.LibericaJDK.8.yaml
@@ -1,4 +1,4 @@
-PackageIdentifier: BellSoft.LibericaJDK8
+PackageIdentifier: BellSoft.LibericaJDK.8
 PackageName: Liberica JDK 8
 PackageVersion: 8.0.312.7
 Moniker: liberica-jdk8
