Added BellSoft LibericaJDK Full 17.0.1.12

--- a/manifests/b/BellSoft/LibericaJDK/17/Full/17.0.1.12/BellSoft.LibericaJDK.17.Full.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/17/Full/17.0.1.12/BellSoft.LibericaJDK.17.Full.yaml
@@ -1,4 +1,4 @@
-PackageIdentifier: BellSoft.LibericaJDK17Full
+PackageIdentifier: BellSoft.LibericaJDK.17.Full
 PackageName: Liberica JDK 17 Full
 PackageVersion: 17.0.1.12
 Moniker: liberica-jdk17-full
