--- a/manifests/b/BitComet/BitComet/1.82/BitComet.BitComet.locale.en-US.yaml
+++ b/manifests/b/BitComet/BitComet/1.82/BitComet.BitComet.locale.en-US.yaml
@@ -3,6 +3,7 @@
 
 PackageIdentifier: BitComet.BitComet
 PackageVersion: "1.82"
+PackageLocale: en-US
 Publisher: CometNetwork
 PublisherUrl: https://www.bitcomet.com/en
 PublisherSupportUrl: http://wiki.bitcomet.com
