--- a/manifests/b/BellSoft/LibericaJDK/11/Full/11.0.13.8/BellSoft.LibericaJDK.11.Full.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/11/Full/11.0.13.8/BellSoft.LibericaJDK.11.Full.yaml
@@ -1,4 +1,4 @@
-PackageIdentifier: BellSoft.LibericaJDK11Full
+PackageIdentifier: BellSoft.LibericaJDK.11.Full
 PackageName: Liberica JDK 11 Full
 PackageVersion: 11.0.13.8
 Moniker: liberica-jdk11-full
