Added BellSoft LibericaJDK Full 8.0.312.7

--- a/manifests/b/BellSoft/LibericaJDK/8/Full/8.0.312.7/BellSoft.LibericaJDK.8.Full.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/8/Full/8.0.312.7/BellSoft.LibericaJDK.8.Full.yaml
@@ -1,4 +1,4 @@
-PackageIdentifier: BellSoft.LibericaJDK8Full
+PackageIdentifier: BellSoft.LibericaJDK.8.Full
 PackageName: Liberica JDK 8 Full
 PackageVersion: 8.0.312.7
 Moniker: liberica-jdk8-full
