--- a/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.LTS.locale.en-US.yaml
+++ b/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.LTS.locale.en-US.yaml
@@ -17,7 +17,7 @@ Copyright: Copyright (c) Joyent, Inc. and other Node contributors. All rights re
 CopyrightUrl: https://raw.githubusercontent.com/nodejs/node/v16.13.0/LICENSE
 ShortDescription: Node.js is a JavaScript runtime built on Chrome"s V8 JavaScript engine.
 Description: Node.js is a JavaScript runtime built on Chrome"s V8 JavaScript engine. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient. Node.js" package ecosystem, npm, is the largest ecosystem of open source libraries in the world.
-Moniker: nodejs
+Moniker: nodejs-lts
 Tags:
 - nodejs
 - node
