--- a/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.LTS.locale.en-US.yaml
+++ b/manifests/o/OpenJS/NodeJS/LTS/16.13.0/OpenJS.NodeJS.LTS.locale.en-US.yaml
@@ -9,7 +9,7 @@ PublisherUrl: https://nodejs.org
 PublisherSupportUrl: https://github.com/nodejs/help/issues
 PrivacyUrl: https://nodejs.org/en/about/privacy/
 Author: OpenJS Foundation
-PackageName: Node.js
+PackageName: Node.js LTS
 PackageUrl: https://nodejs.org/en/
 License: Copyright (c) Joyent, Inc. and other Node contributors. All rights reserved.
 LicenseUrl: https://raw.githubusercontent.com/nodejs/node/v16.13.0/LICENSE
