Updated GeForce Now to version 2.0.34.132.

--- a/manifests/n/Nvidia/GeForceNow/2.0.34.132/Nvidia.GeForceNow.locale.en-US.yaml
+++ b/manifests/n/Nvidia/GeForceNow/2.0.34.132/Nvidia.GeForceNow.locale.en-US.yaml
@@ -1,8 +1,6 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
-
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
 PackageIdentifier: Nvidia.GeForceNow
-PackageVersion: 2.0.33.123
+PackageVersion: 2.0.34.132
 PackageLocale: en-US
 Publisher: NVIDIA Corporation
 PublisherUrl: https://www.nvidia.com
@@ -24,3 +22,4 @@ Tags:
 - game-streaming
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
+
