--- a/manifests/g/Google/Chrome/Beta/96.0.4664.27/Google.Chrome.Beta.installer.yaml
+++ b/manifests/g/Google/Chrome/Beta/96.0.4664.27/Google.Chrome.Beta.installer.yaml
@@ -1,8 +1,6 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
-
 PackageIdentifier: Google.Chrome.Beta
-PackageVersion: 96.0.4664.18
+PackageVersion: 96.0.4664.27
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
@@ -24,11 +22,12 @@ FileExtensions:
 Installers:
 - Architecture: x64
   InstallerUrl: https://dl.google.com/tag/s/dl/chrome/install/beta/googlechromebetastandaloneenterprise64.msi
-  InstallerSha256: 9FB00B954C3F937231816B7B36C2E9043753B7147B87131F977DDE6582A28B05
-  ProductCode: '{BC2EB690-989F-3DEF-8235-1E75700E8C2F}'
+  InstallerSha256: 5AC952E0DDE9404283BC6F71F92A828A2ECF5BFAA620663C7186349733B94280
+  ProductCode: "{8187AA3F-02FC-3EFA-B149-2CDDF97F2DF3}"
 - Architecture: x86
   InstallerUrl: https://dl.google.com/tag/s/dl/chrome/install/beta/googlechromebetastandaloneenterprise.msi
-  InstallerSha256: 5919E5078539ABB606E45EAA4B2909C8A17591BDD483A3FF0B05F8D09C792913
-  ProductCode: '{F874B6DC-FDFB-3564-ADDC-101ACD6DD0E7}'
+  InstallerSha256: 02910767CBC5422276563ED988153FD8A6231BA1A62B07BD3B82A026FBDFF1F1
+  ProductCode: "{EAFC41CF-00D6-3B8D-8220-2993E00BCC79}"
 ManifestType: installer
 ManifestVersion: 1.0.0
+
