--- a/manifests/u/Ubisoft/Connect/127.0.10614/Ubisoft.Connect.installer.yaml
+++ b/manifests/u/Ubisoft/Connect/127.0.10614/Ubisoft.Connect.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-4
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Ubisoft.Connect
-PackageVersion: 126.1.10597
+PackageVersion: 127.0.10614
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
@@ -15,6 +15,6 @@ UpgradeBehavior: install
 Installers:
 - Architecture: x86
   InstallerUrl: https://ubistatic3-a.akamaihd.net/orbit/launcher_installer/UbisoftConnectInstaller.exe
-  InstallerSha256: 5131C69A1D11146F9F95CCA99C4426CDB71670E3EB3521AD9999D470AAA05E0D
+  InstallerSha256: 3FF9C9828F2A81BA8CB1DB7480B6D5E8CE9CBF7CDFD22B9163289D4F0FA5F5C7
 ManifestType: installer
 ManifestVersion: 1.0.0
