--- a/manifests/u/Ubisoft/Connect/127.0.10614/Ubisoft.Connect.locale.en-US.yaml
+++ b/manifests/u/Ubisoft/Connect/127.0.10614/Ubisoft.Connect.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-4
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Ubisoft.Connect
-PackageVersion: 126.1.10597
+PackageVersion: 127.0.10614
 PackageLocale: en-US
 Publisher: Ubisoft
 PublisherUrl: https://www.ubisoft.com/en-us/
