--- a/manifests/d/Diladele/WebProxy/1.7.0.0/Diladele.WebProxy.installer.yaml
+++ b/manifests/d/Diladele/WebProxy/1.7.0.0/Diladele.WebProxy.installer.yaml
@@ -1,6 +1,6 @@
 ﻿# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 PackageIdentifier: Diladele.WebProxy
-PackageVersion: 1.5.0.0
+PackageVersion: 1.7.0.0
 MinimumOSVersion: 10.0.0.0
 InstallModes:
   - interactive
@@ -9,8 +9,8 @@ InstallModes:
 Installers:
   - Architecture: x64
     InstallerType: msi
-    InstallerUrl: https://packages.diladele.com/webproxy/1.5.0.7B50/amd64/release/windows/webproxy-1.5.0.7B50_amd64.msi
-    InstallerSha256: AD9F8FC59141CF4B43DAAF9DAE077037E55F945D5B1179D12BA892BE5561FA3A
+    InstallerUrl: https://packages.diladele.com/webproxy/1.7.0.BD24/amd64/release/windows/webproxy-1.7.0.BD24_amd64.msi
+    InstallerSha256: CAD2E829B966E3DEFC4912C0346638E6FE28B9D8251256EED9DCB99464571949
     InstallerSwitches:
       Silent: /qn
     ProductCode: "{927CF0E7-057C-457C-A8AA-98BEE4CDA21F}"
