--- a/manifests/m/MadOtterGames/VillagersandHeroes/2.3.7/MadOtterGames.VillagersandHeroes.locale.en-US.yaml
+++ b/manifests/m/MadOtterGames/VillagersandHeroes/2.3.7/MadOtterGames.VillagersandHeroes.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: MadOtterGames.VillagersandHeroes
 PackageVersion: 2.3.7
 PackageLocale: en-US
-Publisher: Mad Otter Games Inc
+Publisher: Mad Otter Games, Inc
 PackageName: Villagers and Heroes
 License: © 2019 by Mad Otter Games
 ShortDescription: THE WORLD'S LARGEST CROSS-PLATFORM MMO
