--- a/manifests/k/KOGGames/Elsword/1.0.0.2/KOGGames.Elsword.yaml
+++ b/manifests/k/KOGGames/Elsword/1.0.0.2/KOGGames.Elsword.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: KOGGames.Elsword
-PackageVersion: 1.0.0.2
+PackageVersion: EN.L.200909.1.3
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
