--- a/manifests/k/KOGGames/Elsword/1.0.0.2/KOGGames.Elsword.installer.yaml
+++ b/manifests/k/KOGGames/Elsword/1.0.0.2/KOGGames.Elsword.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: KOGGames.Elsword
-PackageVersion: 1.0.0.2
+PackageVersion: EN.L.200909.1.3
 Installers:
 - InstallerUrl: https://elsword-us-client-down.playkog.com/Download/Downloader/ElswordInstaller_NA.exe
   Architecture: x86
