--- a/manifests/s/Sogou/SogouWBInput/5.3.0.2475/Sogou.SogouWBInput.installer.yaml
+++ b/manifests/s/Sogou/SogouWBInput/5.3.0.2475/Sogou.SogouWBInput.installer.yaml
@@ -14,7 +14,7 @@ FileExtensions:
 ProductCode: Sogou WBInput
 Installers:
 - Architecture: neutral
-  InstallerUrl: https://ime.sogouimecdn.com/202110272225/fcbe7b9800efc72efa54ce5b0eee5909/dl/index/1635337540/sogou_wubi_53a.exe
+  InstallerUrl: http://cdn2.ime.sogou.com/dl/index/1635337540/sogou_wubi_53a.exe
   InstallerSha256: D415EA38724CC7FF4DCF6B73F76A446C2AF4CBB9E645112354364E51A0755B33
 ManifestType: installer
 ManifestVersion: 1.0.0
