Apply suggestions from code review
Co-authored-by: Levvie - she/her <11600822+ItzLevvie@users.noreply.github.com>

--- a/manifests/e/EagleDynamics/DCSWorld/2.7/EagleDynamics.DCSWorld.locale.en-US.yaml
+++ b/manifests/e/EagleDynamics/DCSWorld/2.7/EagleDynamics.DCSWorld.locale.en-US.yaml
@@ -2,12 +2,14 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: EagleDynamics.DCSWorld
-PackageVersion: 2.7
+PackageVersion: 2
 PackageLocale: en-US
 Publisher: Eagle Dynamics
 PackageName: DCS World
-License: Eagle Dynamics
-ShortDescription: DCS World game/sim
+License: Proprietary
+LicenseUrl: https://www.digitalcombatsimulator.com/en/support/license/
+PackageUrl: https://www.digitalcombatsimulator.com/en/
+ShortDescription: A free-to-play digital battlefield game and simulation environment.
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
 
