--- a/manifests/b/BlueStack/BlueStacks/5.3.0.1076/BlueStack.BlueStacks.installer.yaml
+++ b/manifests/b/BlueStack/BlueStacks/5.3.0.1076/BlueStack.BlueStacks.installer.yaml
@@ -6,8 +6,8 @@ PackageVersion: 5.3.0.1076
 Installers:
 - Architecture: x64
   InstallerType: exe
-  InstallerUrl: https://cdn3.bluestacks.com/downloads/windows/nxt/5.3.0.1076/244e279d16944b098763c7add804a0df/FullInstaller/x64/BlueStacksFullInstaller_5.3.0.1076_amd64_native.exe
-  InstallerSha256: 997400F4FCAE308953B2F7710342446458848011E500E78A7DC4125F0B100FE1
+  InstallerUrl: https://cdn3.bluestacks.com/downloads/windows/nxt/5.3.145.1002/293d78968ca4490b893dc06d1835bb15/BlueStacksMicroInstaller_5.3.145.1002_native.exe?filename=BlueStacksInstaller_5.3.145.1002_native_fd0c0b55e0dd13c8617ba58bc150d112_3.exe
+  InstallerSha256: 88DFC7E28FE9B04AEDB12980C4AEF29EA91E1E4CF0D637D0625B190A92431262
   InstallerSwitches:
     Silent: -s
     SilentWithProgress: -s
