--- a/manifests/m/Mobirise/Mobirise/5.5.0/Mobirise.Mobirise.installer.yaml
+++ b/manifests/m/Mobirise/Mobirise/5.5.0/Mobirise.Mobirise.installer.yaml
@@ -1,19 +1,19 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Mobirise.Mobirise
-PackageVersion: 5.4.1
+PackageVersion: 5.5.0
+InstallerLocale: en-US
 MinimumOSVersion: 10.0.0.0
+InstallerType: nullsoft
+Scope: machine
 InstallModes:
 - interactive
 - silent
+UpgradeBehavior: install
 Installers:
-- InstallerLocale: en-US
-  Architecture: x86
-  InstallerType: nullsoft
-  Scope: machine
+- Architecture: x86
   InstallerUrl: https://download.mobirise.com/MobiriseSetup.exe
-  InstallerSha256: 20F02E8D992B21F713D0E912A3374838E568ECFDE5F1E5F02715AACAB05782EB
-  UpgradeBehavior: install
+  InstallerSha256: 8F0753DD0AE2CD027F7A82D55DA783F1F7F68774A0E26BB45C7F5095879600D1
 ManifestType: installer
 ManifestVersion: 1.0.0
