--- a/manifests/m/Mobirise/Mobirise/5.5.0/Mobirise.Mobirise.locale.en-US.yaml
+++ b/manifests/m/Mobirise/Mobirise/5.5.0/Mobirise.Mobirise.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Mobirise.Mobirise
-PackageVersion: 5.4.1
+PackageVersion: 5.5.0
 PackageLocale: en-US
 Publisher: Mobirise.com
 PublisherUrl: https://mobirise.com/
@@ -16,6 +16,7 @@ LicenseUrl: https://mobirise.com/terms.html
 Copyright: Copyright (c) 2021 Mobirise.com
 CopyrightUrl: https://mobirise.com/terms.html
 ShortDescription: Mobirise is a free offline app for Windows and Mac to easily create small/medium websites, landing pages, online resumes and portfolios.
+# Description: 
 Moniker: mobirise
 Tags:
 - website
