--- a/manifests/t/TunnelBear/TunnelBear/4.4.7.0/TunnelBear.TunnelBear.installer.yaml
+++ b/manifests/t/TunnelBear/TunnelBear/4.4.7.0/TunnelBear.TunnelBear.installer.yaml
@@ -1,24 +1,26 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: TunnelBear.TunnelBear
-PackageVersion: 4.4.6.0
+PackageVersion: 4.4.7.0
+Platform:
+- Windows.Desktop
 MinimumOSVersion: 10.0.0.0
+InstallerType: exe
+Scope: machine
 InstallModes:
 - interactive
 - silent
+InstallerSwitches:
+  Silent: -s
+  SilentWithProgress: -s
+UpgradeBehavior: install
 Dependencies:
   PackageDependencies:
-  - PackageIdentifier: Microsoft.VC++2015-2019Redist-x86
+  - PackageIdentifier: Microsoft.VC++2015Redist-x86
 Installers:
-- InstallerLocale: en-US
-  Architecture: x86
-  InstallerType: exe
-  Scope: machine
+- Architecture: x86
   InstallerUrl: https://tunnelbear.s3.amazonaws.com/downloads/pc/public/TunnelBear-Installer.exe
-  InstallerSha256: 371F26B043EE62A5025E95F3EAF98482A4BDEEEAE5AF03C373C67C028F2DDC66
-  InstallerSwitches:
-    Silent: -s
-  UpgradeBehavior: install
+  InstallerSha256: AA85AE5B6E947C41113D4D23B5AE1557FE255533EACA3B3DA3FF5C47D32F2894
 ManifestType: installer
 ManifestVersion: 1.0.0
