Comment out PublisherSupportUrl

--- a/manifests/t/TunnelBear/TunnelBear/4.4.7.0/TunnelBear.TunnelBear.locale.en-US.yaml
+++ b/manifests/t/TunnelBear/TunnelBear/4.4.7.0/TunnelBear.TunnelBear.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 4.4.7.0
 PackageLocale: en-US
 Publisher: TunnelBear
 PublisherUrl: https://www.tunnelbear.com
-PublisherSupportUrl: https://help.tunnelbear.com/hc/en-us
+# PublisherSupportUrl: https://help.tunnelbear.com/hc/en-us
 PrivacyUrl: https://www.tunnelbear.com/privacy-policy
 Author: TunnelBear
 PackageName: TunnelBear
