--- a/manifests/s/Surfshark/SurfsharkVPN/3.1.0999/Surfshark.SurfsharkVPN.locale.en-US.yaml
+++ b/manifests/s/Surfshark/SurfsharkVPN/3.1.0999/Surfshark.SurfsharkVPN.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Surfshark.SurfsharkVPN
-PackageVersion: 3.0.2999
+PackageVersion: 3.1.0999
 PackageLocale: en-US
 Publisher: Surfshark
 PublisherUrl: https://surfshark.com/
