Comment out PublisherSupportUrl

--- a/manifests/s/Surfshark/SurfsharkVPN/3.1.0999/Surfshark.SurfsharkVPN.locale.en-US.yaml
+++ b/manifests/s/Surfshark/SurfsharkVPN/3.1.0999/Surfshark.SurfsharkVPN.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 3.1.0999
 PackageLocale: en-US
 Publisher: Surfshark
 PublisherUrl: https://surfshark.com/
-PublisherSupportUrl: https://support.surfshark.com/hc/en-us
+# PublisherSupportUrl: https://support.surfshark.com/hc/en-us
 PrivacyUrl: https://surfshark.com/privacy-policy
 Author: Surfshark
 PackageName: Surfshark
