Architecture: Microsoft.PowerBI version 2.98.1004.0

--- a/manifests/m/Microsoft/PowerBI/2.98.1004.0/Microsoft.PowerBI.installer.yaml
+++ b/manifests/m/Microsoft/PowerBI/2.98.1004.0/Microsoft.PowerBI.installer.yaml
@@ -24,5 +24,8 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://download.microsoft.com/download/8/8/0/880BCA75-79DD-466A-927D-1ABF1F5454B0/PBIDesktopSetup.exe
   InstallerSha256: 0FD45B1680D80F091AD2E1186297B984F04BAE9C9E2A534FEB5BC8178449EB21
+- Architecture: x64
+  InstallerUrl: https://download.microsoft.com/download/8/8/0/880BCA75-79DD-466A-927D-1ABF1F5454B0/PBIDesktopSetup_x64.exe
+  InstallerSha256: E7F98A2C494AC0F70A8605EFFFB77185308C2A77A10A10EF59DD0474E03BA65C
 ManifestType: installer
 ManifestVersion: 1.0.0
