--- a/manifests/m/Microsoft/Office/16.0.14527.20234/Microsoft.Office.installer.yaml
+++ b/manifests/m/Microsoft/Office/16.0.14527.20234/Microsoft.Office.installer.yaml
@@ -1,23 +1,24 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.Office
-PackageVersion: 16.0.14326.20404
+PackageVersion: 16.0.14527.20234
+Platform:
+- Windows.Desktop
 MinimumOSVersion: 10.0.0.0
+InstallerType: exe
+Scope: machine
 InstallModes:
 - interactive
 - silent
 - silentWithProgress
+InstallerSwitches:
+  Silent: /configure https://aka.ms/fhlwingetconfig
+  SilentWithProgress: /configure https://aka.ms/fhlwingetconfig
+UpgradeBehavior: install
 Installers:
-- InstallerLocale: en-US
-  Architecture: neutral
-  InstallerType: exe
-  Scope: machine
+- Architecture: neutral
   InstallerUrl: https://officecdn.microsoft.com/pr/wsus/setup.exe
   InstallerSha256: AAE9C94BC546D208868BC04A823AD6A716B1B4D3AD7010263B0690082E3B8DA8
-  InstallerSwitches:
-    Silent: /configure https://aka.ms/fhlwingetconfig
-    SilentWithProgress: /configure https://aka.ms/fhlwingetconfig
-  UpgradeBehavior: install
 ManifestType: installer
 ManifestVersion: 1.0.0
