New version: TunnelBear.TunnelBear version 4.4.7.0 (#32984)
* New version: TunnelBear.TunnelBear version 4.4.7.0

* Comment out PublisherSupportUrl

--- a/manifests/t/TunnelBear/TunnelBear/4.4.7.0/TunnelBear.TunnelBear.locale.en-US.yaml
+++ b/manifests/t/TunnelBear/TunnelBear/4.4.7.0/TunnelBear.TunnelBear.locale.en-US.yaml
@@ -1,12 +1,12 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: TunnelBear.TunnelBear
-PackageVersion: 4.4.6.0
+PackageVersion: 4.4.7.0
 PackageLocale: en-US
 Publisher: TunnelBear
 PublisherUrl: https://www.tunnelbear.com
-PublisherSupportUrl: https://help.tunnelbear.com/hc/en-us
+# PublisherSupportUrl: https://help.tunnelbear.com/hc/en-us
 PrivacyUrl: https://www.tunnelbear.com/privacy-policy
 Author: TunnelBear
 PackageName: TunnelBear
