--- a/manifests/g/GIMP/Beta/2.99.8/GIMP.Beta.installer.yaml
+++ b/manifests/g/GIMP/Beta/2.99.8/GIMP.Beta.installer.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2.99.8
 Installers:
 - Architecture: x86
   InstallerType: inno
-  InstallerUrl: https://mirrors.dotsrc.org/gimp/pub/gimp/v2.99/windows/gimp-2.99.8-setup.exe
+  InstallerUrl: https://download.gimp.org/pub/gimp/v2.99/windows/gimp-2.99.8-setup.exe
   InstallerSha256: C8BA9AD9E9325244042237A4E05AE1E46CC31B0226D287AEFCF836E6C8F216DB
 ManifestType: installer
 ManifestVersion: 1.0.0
