--- a/manifests/m/Microsoft/XMLNotepad/2.8.0.47/Microsoft.XMLNotepad.installer.yaml
+++ b/manifests/m/Microsoft/XMLNotepad/2.8.0.47/Microsoft.XMLNotepad.installer.yaml
@@ -21,5 +21,6 @@ Installers:
   InstallerUrl: https://github.com/microsoft/XmlNotepad/releases/download/2.8.0.47/XmlNotepadPackage_2.8.0.47_AnyCPU.msixbundle
   InstallerSha256: 4E375CF3B0549BE8091B50C992DE311113E40A0C09725E4606F12B1DEDBE3335
   SignatureSha256: 13D2ECC0C443D1E92A2259CE437ED35D631079657BEC0EEAC06B96AD05A1626F
+  PackageFamilyName: 5632ff08-aa93-439a-b09f-677eb3664250_b2j8apzf1bbh6
 ManifestType: installer
 ManifestVersion: 1.0.0
