--- a/manifests/m/Microsoft/XMLNotepad/2.8.0.47/Microsoft.XMLNotepad.locale.en-US.yaml
+++ b/manifests/m/Microsoft/XMLNotepad/2.8.0.47/Microsoft.XMLNotepad.locale.en-US.yaml
@@ -15,11 +15,13 @@ License: MIT License
 LicenseUrl: https://raw.githubusercontent.com/microsoft/XmlNotepad/master/LICENSE
 Copyright: Copyright (c) 2021 Microsoft Corporation
 CopyrightUrl: https://raw.githubusercontent.com/microsoft/XmlNotepad/master/LICENSE
-ShortDescription: XML Notepad is a lightweight and fast tool for editing XML documents.
-Description: XML Notepad is a lightweight and fast tool for editing XML documents. XML has proliferated across the planet and XML Notepad has been downloaded over 3 million times!
+ShortDescription: XML Notepad provides a simple intuitive User Interface for browsing and editing XML documents.
+Description: XML Notepad is the result of a promise Chris Lovett made to a friend at Microsoft. The original XML Notepad shipped in back in 1998, written by Murray Low in C++. Later on it fell behind in support for XML standards and, because we didn't have time to fix it, we pulled the downloader. But Murray apparently did such a nice job that MSDN was inundated with requests to put the notepad back up, so they asked for a replacement.
 Moniker: xmlnotepad
 Tags:
-- xml editor
-- xml
+- xml-editor
+- xml-files
+- xml-statistics
+- extensible-markup-language
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
