--- a/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.yaml
+++ b/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: Timber1900.WebDL
-PackageVersion: 11.2.2
+PackageVersion: v11.2.2
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
