Update and rename manifests/t/Timber1900/WebDL/11.2.2/Timber1900.WebDL.installer.yaml to manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.installer.yaml

--- a/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.installer.yaml
+++ b/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Timber1900.WebDL
-PackageVersion: 11.2.2
+PackageVersion: v11.2.2
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
