Update and rename manifests/t/Timber1900/WebDL/11.2.2/Timber1900.WebDL.locale.en-US.yaml to manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.locale.en-US.yaml

--- a/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.locale.en-US.yaml
+++ b/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Timber1900.WebDL
-PackageVersion: 11.2.2
+PackageVersion: v11.2.2
 PackageLocale: en-US
 Publisher: Timber1900
 PublisherUrl: https://github.com/Timber1900/WebDL
@@ -15,8 +15,8 @@ License: MIT License
 LicenseUrl: https://raw.githubusercontent.com/Timber1900/WebDL/main/LICENSE
 Copyright: Copyright (c) 2020-2021 Timber1900
 CopyrightUrl: https://raw.githubusercontent.com/Timber1900/WebDL/main/LICENSE
-ShortDescription: 'WebDL downloads videos from the web. Some supported sites are: Youtube, Twitch, Twitter, Imgur, etc...'
-# Description: 
+ShortDescription: WebDL downloads videos from the web. Some supported sites are: Youtube, Twitch, Twitter, Imgur, etc...
+Description: Meet WebDL! This windows application + companion chrome extension downloads a web video on user request, just press the extension button and do the rest on the app! It downloads videos, what more do you want? Supported sites are listed here: https://ytdl-org.github.io/youtube-dl/supportedsites.html
 # Moniker: 
 Tags:
 - youtube-downloader
