--- a/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.locale.en-US.yaml
+++ b/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.locale.en-US.yaml
@@ -21,6 +21,8 @@ Description: Meet WebDL! This windows application + companion chrome extension d
 Tags:
 - youtube-downloader
 - youtube-dl-gui
+- video-downloader
 - downloads-videos
+- youtube-dl
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
