--- a/manifests/m/Microsoft/WingetCreate/0.4.2.1/Microsoft.WingetCreate.installer.yaml
+++ b/manifests/m/Microsoft/WingetCreate/0.4.2.1/Microsoft.WingetCreate.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.WingetCreate
-PackageVersion: 0.4.2.1-preview
+PackageVersion: 0.4.2.1
 Platform:
 - Windows.Universal
 MinimumOSVersion: 10.0.0.0
