Update and rename manifests/m/Microsoft/WingetCreate/0.4.2.1-preview/Microsoft.WingetCreate.locale.en-US.yaml to manifests/m/Microsoft/WingetCreate/0.4.2.1/Microsoft.WingetCreate.locale.en-US.yaml

--- a/manifests/m/Microsoft/WingetCreate/0.4.2.1/Microsoft.WingetCreate.locale.en-US.yaml
+++ b/manifests/m/Microsoft/WingetCreate/0.4.2.1/Microsoft.WingetCreate.locale.en-US.yaml
@@ -22,5 +22,9 @@ Tags:
 - winget
 - command-line
 - package-manager
+- manifests-generator
+- package-manifests
+- yaml
+- winget-pkgs
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
