--- a/manifests/m/Microsoft/WingetCreate/0.4.2.1/Microsoft.WingetCreate.locale.en-US.yaml
+++ b/manifests/m/Microsoft/WingetCreate/0.4.2.1/Microsoft.WingetCreate.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.WingetCreate
-PackageVersion: 0.4.2.1-preview
+PackageVersion: 0.4.2.1
 PackageLocale: en-US
 Publisher: Microsoft Corporation
 PublisherUrl: https://www.microsoft.com/en-US/
