--- a/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.locale.en-US.yaml
+++ b/manifests/t/Timber1900/WebDL/v11.2.2/Timber1900.WebDL.locale.en-US.yaml
@@ -15,8 +15,8 @@ License: MIT License
 LicenseUrl: https://raw.githubusercontent.com/Timber1900/WebDL/main/LICENSE
 Copyright: Copyright (c) 2020-2021 Timber1900
 CopyrightUrl: https://raw.githubusercontent.com/Timber1900/WebDL/main/LICENSE
-ShortDescription: WebDL downloads videos from the web. Some supported sites are: Youtube, Twitch, Twitter, Imgur, etc...
-Description: Meet WebDL! This windows application + companion chrome extension downloads a web video on user request, just press the extension button and do the rest on the app! It downloads videos, what more do you want? Supported sites are listed here: https://ytdl-org.github.io/youtube-dl/supportedsites.html
+ShortDescription: "WebDL downloads videos from the web. Some supported sites are: Youtube, Twitch, Twitter, Imgur, etc..."
+Description: "Meet WebDL! This windows application + companion chrome extension downloads a web video on user request, just press the extension button and do the rest on the app! It downloads videos, what more do you want? Supported sites are listed here: https://ytdl-org.github.io/youtube-dl/supportedsites.html"
 # Moniker: 
 Tags:
 - youtube-downloader
