--- a/manifests/i/Insomnia/Insomnia/2021.6.0/Insomnia.Insomnia.locale.en-US.yaml
+++ b/manifests/i/Insomnia/Insomnia/2021.6.0/Insomnia.Insomnia.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Insomnia.Insomnia
-PackageVersion: core@2021.6.0
+PackageVersion: 2021.6.0
 PackageLocale: en-US
 Publisher: Kong
 PublisherUrl: https://github.com/Kong/insomnia
