--- a/manifests/i/Insomnia/Insomnia/2021.6.0/Insomnia.Insomnia.installer.yaml
+++ b/manifests/i/Insomnia/Insomnia/2021.6.0/Insomnia.Insomnia.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Insomnia.Insomnia
-PackageVersion: core@2021.6.0
+PackageVersion: 2021.6.0
 InstallerLocale: en-US
 MinimumOSVersion: 10.0.0.0
 InstallerType: exe
@@ -15,7 +15,7 @@ InstallerSwitches:
 UpgradeBehavior: install
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/Kong/insomnia/releases/download/core%402021.6.0/Insomnia.Core-2021.6.0-portable.exe
-  InstallerSha256: 6923963F9FE69A6177A5C02CE2AE191CABA0039047A2FCE822A6B4DF5AC31753
+  InstallerUrl: https://github.com/Kong/insomnia/releases/download/core%402021.6.0/Insomnia.Core-2021.6.0.exe
+  InstallerSha256: BC9ED4EC13792AE22E55A93E1C1FCB0A6F062433D1C10D16A5C3460E5CD0CB11
 ManifestType: installer
 ManifestVersion: 1.0.0
