--- a/manifests/b/blueedge/win11react/0.1.2/blueedge.win11react.locale.en-US.yaml
+++ b/manifests/b/blueedge/win11react/0.1.2/blueedge.win11react.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: blueedge.win11react
 PackageVersion: 0.1.2
 PackageLocale: en-US
-Publisher: blueedgetechno
+Publisher: com.blueedgetechno.win11react
 PackageName: Win11inReact
 License: CC0-1.0 License
 ShortDescription: A recreation of Windows 11 in React
