--- a/manifests/l/LanguageTool/LanguageTool/1.0.2/LanguageTool.LanguageTool.installer.yaml
+++ b/manifests/l/LanguageTool/LanguageTool/1.0.2/LanguageTool.LanguageTool.installer.yaml
@@ -3,6 +3,8 @@
 
 PackageIdentifier: LanguageTool.LanguageTool
 PackageVersion: 1.0.2
+Scope: user
+ProductCode: 'dd8063c1-671a-5080-9379-6cf83970e9c2'
 Installers:
 - Architecture: x64
   InstallerType: nullsoft
