--- a/manifests/s/Soroush/Soroush+/1.0.30/Soroush.Soroush+.locale.fa-IR.yaml
+++ b/manifests/s/Soroush/Soroush+/1.0.30/Soroush.Soroush+.locale.fa-IR.yaml
@@ -9,7 +9,7 @@ PublisherUrl: https://hi.splus.ir/
 PublisherSupportUrl: https://hi.splus.ir/contact
 PrivacyUrl: https://hi.splus.ir/privacy
 Author: Soroush
-PackageName: Soroush+
+PackageName: Soroush+ Desktop Application
 PackageUrl: https://hi.splus.ir/
 License: Proprietary
 ShortDescription: Soroush+ instant messaging app
