--- a/manifests/s/Soroush/Soroush+/1.0.30/Soroush.Soroush+.installer.yaml
+++ b/manifests/s/Soroush/Soroush+/1.0.30/Soroush.Soroush+.installer.yaml
@@ -8,6 +8,7 @@ Installers:
   InstallerType: inno
   InstallerUrl: https://windows.splus.ir/
   InstallerSha256: 1A3EECA75C1BB3D836D67F17F22342692F8B90B7F5A48E7B78C69424B780FFA4
+  ProductCode: Soroush+_is1
 ManifestType: installer
 ManifestVersion: 1.0.0
 
