Apply suggestions from code review
Co-authored-by: Levvie - she/her <11600822+ItzLevvie@users.noreply.github.com>

--- a/manifests/a/Albion/Online/10.36.26/Albion.Online.locale.en-US.yaml
+++ b/manifests/a/Albion/Online/10.36.26/Albion.Online.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: Albion.Online
 PackageVersion: 10.36.26
 PackageLocale: en-US
-Publisher: SANDBOX INTERACTIVE GMBH
+Publisher: Sandbox Interactive GmbH
 PackageName: Albion Online
 License: ©2012-2020 SANDBOX INTERACTIVE GMBH
 ShortDescription: Albion Online is the first truly cross-platform MMO experience, available for Windows, Mac, Linux and Android, with all players on one master server in one massive, sprawling world. You choose how your adventure evolves; at home or on the go!
