--- a/manifests/1/115/115Chrome/25.0.0.3/115.115Chrome.locale.zh-CN.yaml
+++ b/manifests/1/115/115Chrome/25.0.0.3/115.115Chrome.locale.zh-CN.yaml
@@ -9,24 +9,24 @@ PublisherUrl: https://115.com
 PublisherSupportUrl: https://q.115.com/feedback/main
 PrivacyUrl: https://115.com/privacy.html
 Author: 广东一一五科技股份有限公司
-PackageName: 115电脑版
+PackageName: 115浏览器
 PackageUrl: https://pc.115.com/browser.html
 License: 专有软件
 LicenseUrl: https://115.com/pc_agreement.html
 Copyright: Copyright 2021 The 115Browser Authors. All rights reserved.
 #CopyrightUrl: 
-ShortDescription: 集合115、115组织、浏览器的PC客户端
+ShortDescription: 集合 115、115 组织、浏览器的 PC 客户端
 #Description: 
 Tags:
 - 网盘
 - 云
 - 云盘
+- 同步
+- 分享
 - 上传
 - 下载
-- 分享
 - 浏览器
-- chromium
-- 115浏览器
+- Chromium
 - '115'
 ManifestType: locale
 ManifestVersion: 1.0.0
