Revert parts of files

--- a/manifests/1/115/115Chrome/25.0.0.3/115.115Chrome.locale.en-US.yaml
+++ b/manifests/1/115/115Chrome/25.0.0.3/115.115Chrome.locale.en-US.yaml
@@ -9,7 +9,7 @@ PublisherUrl: https://115.com
 PublisherSupportUrl: https://q.115.com/feedback/main
 PrivacyUrl: https://115.com/privacy.html
 Author: Guangdong 115 Network Co., Ltd.
-PackageName: 115浏览器
+PackageName: 115电脑版
 PackageUrl: https://pc.115.com/browser.html
 License: Proprietary
 LicenseUrl: https://115.com/pc_agreement.html
