Microsoft.PowerShell.Preview version 7.2.0.10

--- a/manifests/m/Microsoft/PowerShell/Preview/7.2.0.10/Microsoft.PowerShell.Preview.installer.yaml
+++ b/manifests/m/Microsoft/PowerShell/Preview/7.2.0.10/Microsoft.PowerShell.Preview.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.PowerShell.Preview
@@ -25,3 +25,4 @@ Installers:
   ProductCode: '{9D8A4C4C-9E65-4DF2-A86B-6C1DFED228AA}'
 ManifestType: installer
 ManifestVersion: 1.0.0
+
