--- a/manifests/m/Microsoft/PowerShell/Preview/7.2.0.10/Microsoft.PowerShell.Preview.locale.en-US.yaml
+++ b/manifests/m/Microsoft/PowerShell/Preview/7.2.0.10/Microsoft.PowerShell.Preview.locale.en-US.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.PowerShell.Preview
@@ -22,3 +22,4 @@ Tags:
 - command-line
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
+
