--- a/manifests/m/Microsoft/PowerShell/Preview/7.2.0.10/Microsoft.PowerShell.Preview.yaml
+++ b/manifests/m/Microsoft/PowerShell/Preview/7.2.0.10/Microsoft.PowerShell.Preview.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.PowerShell.Preview
@@ -6,3 +6,4 @@ PackageVersion: 7.2.0.10
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
+
