--- a/manifests/j/JeniusApps/Ambie/2.0.14.0/JeniusApps.Ambie.locale.en-US.yaml
+++ b/manifests/j/JeniusApps/Ambie/2.0.14.0/JeniusApps.Ambie.locale.en-US.yaml
@@ -17,7 +17,8 @@ ShortDescription: The best white noise app on Windows
 Description: Ambie is a mindful focused application that plays ambient sounds and create mixes to help you focus, sleep, or meditate.
 Moniker: Ambie
 Tags:
-- Health & Fitness
+- health
+- fitness
 - restful
 - relaxation
 - meditation
