qsirch package name

--- a/manifests/q/QNAP/Qsirch/1.0.2.0/QNAP.Qsirch.locale.en-US.yaml
+++ b/manifests/q/QNAP/Qsirch/1.0.2.0/QNAP.Qsirch.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: QNAP.Qsirch
 PackageVersion: 1.0.2.0
 PackageLocale: en-US
 Publisher: QNAP Systems, Inc.
-PackageName: QNAP Qsirch
+PackageName: Qsirch PC Edition
 License: © 2004-2019 QNAP Systems, Inc. All rights reserved.
 ShortDescription: Qsirch is a fast, full-text search engine that enables you to find files based on filename, content, and metadata.
 ManifestType: defaultLocale
