Added Kate version 21.08.2.

--- a/manifests/k/KDE/Kate/21.08.2/KDE.Kate.locale.en-US.yaml
+++ b/manifests/k/KDE/Kate/21.08.2/KDE.Kate.locale.en-US.yaml
@@ -1,6 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.5-1-19041-1237
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
-
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
 PackageIdentifier: KDE.Kate
 PackageVersion: 21.08.2
 PackageLocale: en-US
@@ -14,9 +12,7 @@ PackageUrl: https://kate-editor.org/
 License: GNU LGPL v2 or later
 LicenseUrl: https://invent.kde.org/utilities/kate/-/blob/master/LICENSES/LGPL-2.0-or-later.txt
 Copyright: Copyright © 2021, KDE e.V.
-# CopyrightUrl: 
 ShortDescription: Kate is a feature-packed text editor with syntax highlighting, multi tab view, tool for delevopers and plugins
-# Description: 
 Moniker: Kate
 Tags:
 - kate
@@ -30,3 +26,4 @@ Tags:
 - qt
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
+
