Added Spotify version 1.1.71.560.gc21c3367.

--- a/manifests/s/Spotify/Spotify/1.1.71.560.gc21c3367/Spotify.Spotify.locale.en-US.yaml
+++ b/manifests/s/Spotify/Spotify/1.1.71.560.gc21c3367/Spotify.Spotify.locale.en-US.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
 PackageIdentifier: Spotify.Spotify
-PackageVersion: 1.1.70.610.g4585142b
+PackageVersion: 1.1.71.560.gc21c3367
 PackageLocale: en-US
 Publisher: Spotify AB
 PublisherUrl: https://www.spotify.com
