--- a/manifests/s/Spotify/Spotify/1.1.71.560.gc21c3367/Spotify.Spotify.installer.yaml
+++ b/manifests/s/Spotify/Spotify/1.1.71.560.gc21c3367/Spotify.Spotify.installer.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 PackageIdentifier: Spotify.Spotify
-PackageVersion: 1.1.70.610.g4585142b
+PackageVersion: 1.1.71.560.gc21c3367
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
@@ -12,7 +12,7 @@ Installers:
   InstallerType: exe
   Scope: user
   InstallerUrl: https://download.scdn.co/SpotifyFullSetup.exe
-  InstallerSha256: EE24BCE5C0A2F1686E4EAAC6886E7AFEE5842FB920572056ED822EE8DADD5D0B
+  InstallerSha256: E40BF92A02B7F3F3D460192FFD627D076E4A07C05DC277CCEA63ED4DF6C5C3FC
   InstallerSwitches:
     Silent: /Silent
     SilentWithProgress: /Silent
