Apply suggestions from code review
Co-authored-by: Levvie - she/her <11600822+ItzLevvie@users.noreply.github.com>

--- a/manifests/x/XMind/8/3.7.9.201912052356/XMind.8.locale.zh-CN.yaml
+++ b/manifests/x/XMind/8/3.7.9.201912052356/XMind.8.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 3.7.9.201912052356
 PackageLocale: zh-CN
 Publisher: XMind Ltd.
 PublisherUrl: https://www.xmind.cn
-PublisherSupportUrl: https://support.xmind.net/hc/zh-cn
+#PublisherSupportUrl: https://support.xmind.net/hc/zh-cn
 PrivacyUrl: https://www.xmind.cn/privacy/
 Author: 深圳市爱思软件技术有限公司
 PackageName: XMind 8
