--- a/manifests/x/XMind/8/3.7.9.201912052356/XMind.8.locale.en-US.yaml
+++ b/manifests/x/XMind/8/3.7.9.201912052356/XMind.8.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 3.7.9.201912052356
 PackageLocale: en-US
 Publisher: XMind Ltd.
 PublisherUrl: https://www.xmind.net
-PublisherSupportUrl: https://support.xmind.net/hc/en-us
+#PublisherSupportUrl: https://support.xmind.net/hc/en-us
 PrivacyUrl: https://www.xmind.net/privacy/
 Author: XMind Ltd.
 PackageName: XMind 8
