Update InstallerSwitches and add FileExtensions

--- a/manifests/t/TTKN/CNKIExpress/0.1.12/TTKN.CNKIExpress.installer.yaml
+++ b/manifests/t/TTKN/CNKIExpress/0.1.12/TTKN.CNKIExpress.installer.yaml
@@ -5,7 +5,14 @@ PackageIdentifier: TTKN.CNKIExpress
 PackageVersion: 0.1.12
 MinimumOSVersion: 10.0.0.0
 InstallerType: nullsoft # electron-builder
+InstallerSwitches:
+  Upgrade: --updated
 UpgradeBehavior: install
+FileExtensions:
+- caj
+- kdh
+- nh
+- teb
 ProductCode: fdb21ffe-a525-5be7-af3a-a9436d18cc4f
 Installers:
 - Architecture: x64
@@ -13,14 +20,12 @@ Installers:
   InstallerUrl: https://download.cnki.net/cnkiexpress/%E5%85%A8%E7%90%83%E5%AD%A6%E6%9C%AF%E5%BF%AB%E6%8A%A5%20Setup%200.1.12.exe
   InstallerSha256: 62451BFC21CF59FAE2F7F0365FB5087A642AA7A36D32981F0633769A5207E8C4
   InstallerSwitches:
-    Upgrade: --updated
     Custom: /CURRENTUSER
 - Architecture: x64
   Scope: machine
   InstallerUrl: https://download.cnki.net/cnkiexpress/%E5%85%A8%E7%90%83%E5%AD%A6%E6%9C%AF%E5%BF%AB%E6%8A%A5%20Setup%200.1.12.exe
   InstallerSha256: 62451BFC21CF59FAE2F7F0365FB5087A642AA7A36D32981F0633769A5207E8C4
   InstallerSwitches:
-    Upgrade: --updated
     Custom: /ALLUSERS
 ManifestType: installer
 ManifestVersion: 1.0.0
