Attempt fixing silent flag

--- a/manifests/w/WindscribeLimited/Windscribe/2.0.2.10/WindscribeLimited.Windscribe.installer.yaml
+++ b/manifests/w/WindscribeLimited/Windscribe/2.0.2.10/WindscribeLimited.Windscribe.installer.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: WindscribeLimited.Windscribe
 PackageVersion: 2.0.2.10
 InstallerSwitches:
-  Silent: -silent
+  Silent: /VERYSILENT
 Installers:
 - Architecture: x86
   InstallerType: exe
