Apply PR Suggestions

--- a/manifests/c/c0re100/qBittorrent-Enhanced-Edition/4.3.9.10/c0re100.qBittorrent-Enhanced-Edition.locale.en-US.yaml
+++ b/manifests/c/c0re100/qBittorrent-Enhanced-Edition/4.3.9.10/c0re100.qBittorrent-Enhanced-Edition.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: c0re100.qBittorrent-Enhanced-Edition
-PackageVersion: release-4.3.9.10
+PackageVersion: 4.3.9.10
 PackageLocale: en-US
 Publisher: The qBittorrent project
 PublisherUrl: https://github.com/c0re100/qBittorrent-Enhanced-Edition
