--- a/manifests/c/c0re100/qBittorrent-Enhanced-Edition/4.3.9.10/c0re100.qBittorrent-Enhanced-Edition.installer.yaml
+++ b/manifests/c/c0re100/qBittorrent-Enhanced-Edition/4.3.9.10/c0re100.qBittorrent-Enhanced-Edition.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: c0re100.qBittorrent-Enhanced-Edition
-PackageVersion: release-4.3.9.10
+PackageVersion: 4.3.9.10
 InstallerLocale: en-US
 MinimumOSVersion: 10.0.0.0
 InstallerType: nullsoft
@@ -16,10 +16,10 @@ Protocols:
 FileExtensions:
 - torrent
 Installers:
-- Architecture: x64
+- Architecture: x86
   InstallerUrl: https://github.com/c0re100/qBittorrent-Enhanced-Edition/releases/download/release-4.3.9.10/qbittorrent_4.3.9.10_setup.exe
   InstallerSha256: 80B43886C61D8AB3F0540960C6F21A090C7D6CD69086763A856A65F9F14FA47D
-- Architecture: x86
+- Architecture: x64
   InstallerUrl: https://github.com/c0re100/qBittorrent-Enhanced-Edition/releases/download/release-4.3.9.10/qbittorrent_4.3.9.10_x64_setup.exe
   InstallerSha256: 59E6EE42F188FCC7B2E2F37477C539CCD1A618D45F5CCEBA3D1B03B270C32854
 ManifestType: installer
