--- a/manifests/c/c0re100/qBittorrent-Enhanced-Edition/4.3.9.10/c0re100.qBittorrent-Enhanced-Edition.yaml
+++ b/manifests/c/c0re100/qBittorrent-Enhanced-Edition/4.3.9.10/c0re100.qBittorrent-Enhanced-Edition.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: c0re100.qBittorrent-Enhanced-Edition
-PackageVersion: release-4.3.9.10
+PackageVersion: 4.3.9.10
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
