--- a/manifests/p/PhilipGerke/Odassey/2.1.0/PhilipGerke.Odassey.locale.en-US.yaml
+++ b/manifests/p/PhilipGerke/Odassey/2.1.0/PhilipGerke.Odassey.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: PhilipGerke.Odassey
 PackageVersion: 2.1.0
 PackageLocale: en-US
-Publisher: Ingenieurbüro Philip Gerke
+Publisher: Philip Gerke
 PublisherUrl: https://www.philipgerke.com
 PublisherSupportUrl: https://pgerke.atlassian.net/servicedesk/customer/portal/1
 PrivacyUrl: https://privacy.philipgerke.com/
