Apply suggestions from code review
Co-authored-by: Levvie - she/her <11600822+ItzLevvie@users.noreply.github.com>

--- a/manifests/c/CrystalDewWorld/CrystalDiskInfo/8.12.12/CrystalDewWorld.CrystalDiskInfo.installer.yaml
+++ b/manifests/c/CrystalDewWorld/CrystalDiskInfo/8.12.12/CrystalDewWorld.CrystalDiskInfo.installer.yaml
@@ -12,7 +12,7 @@ InstallModes:
 UpgradeBehavior: install
 Installers:
 - Architecture: neutral
-  InstallerUrl: https://ftp.halifax.rwth-aachen.de/osdn/crystaldiskinfo/76210/CrystalDiskInfo8_12_12.exe
+  InstallerUrl: https://osdn.net/frs/redir.php?m=auto&f=crystaldiskinfo%2F76210%2FCrystalDiskInfo8_12_12.exe
   InstallerSha256: E4F6BB39E43B1FEF65D1C6A060EA812AA01181D08B676C8EC64D96AD9A9B7C4E
 ManifestType: installer
 ManifestVersion: 1.0.0
