Add back package version

--- a/manifests/g/GeekCorner/threema/1.6.0/GeekCorner.threema.locale.en-US.yaml
+++ b/manifests/g/GeekCorner/threema/1.6.0/GeekCorner.threema.locale.en-US.yaml
@@ -2,6 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: GeekCorner.threema
+PackageVersion: 1.6.0
 PackageLocale: en-US
 Publisher: GeekCorner
 PublisherUrl: https://github.com/GeekCornerGH/threema-for-desktop
