--- a/manifests/e/Elastic/Elasticsearch/7.13.0/Elastic.Elasticsearch.yaml
+++ b/manifests/e/Elastic/Elasticsearch/7.13.0/Elastic.Elasticsearch.yaml
@@ -5,7 +5,7 @@ PackageVersion: 7.13.0
 PackageName: Elasticsearch
 Publisher: Elastic
 License: Dual licensed under the Elastic License and the Server Side Public License.
-LicenseUrl: https://github.com/elastic/elasticsearch/blob/master/LICENSE.txt
+LicenseUrl: https://github.com/elastic/elasticsearch/blob/7.13/LICENSE.txt
 ShortDescription: Elasticsearch is a distributed, RESTful search and analytics engine
 PackageUrl: https://www.elastic.co/elasticsearch/
 Installers:
