--- a/manifests/m/MicrosoftCorporation/KinectforWindowsSDKv2/0_1409/2.0.1410.19000/MicrosoftCorporation.KinectforWindowsSDKv2.0_1409.locale.en-US.yaml
+++ b/manifests/m/MicrosoftCorporation/KinectforWindowsSDKv2/0_1409/2.0.1410.19000/MicrosoftCorporation.KinectforWindowsSDKv2.0_1409.locale.en-US.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
-PackageIdentifier: MicrosoftCorporation.KinectforWindowsSDKv2.0_1409
+PackageIdentifier: Microsoft.KinectforWindowsSDK
 PackageVersion: 2.0.1410.19000
 PackageLocale: en-US
 Publisher: Microsoft Corporation
