speficy some manifest options

--- a/manifests/d/DMM/Player/2.1.8/DMM.Player.yaml
+++ b/manifests/d/DMM/Player/2.1.8/DMM.Player.yaml
@@ -5,15 +5,18 @@ Publisher: DMM.com,Inc.
 License: Proprietary
 Moniker: dmmplayer
 Tags:
-- launcher
 - video
 PackageUrl: https://help.dmm.com/-/list/=/mid=141/
+Scope: user
 Installers:
-- Architecture: x86
+- Platform:
+  - Windows.Desktop
+  Architecture: x86
   InstallerUrl: https://www.dmm.com/digital/-/dmmplayerv2inst/=/type=v2_win/
   InstallerSha256: ecd5b07cd0dab6d23420c23534fa0360440fe0d36e86a370c124e3b4c411e086
-  InstallerType: inno
+  InstallerType: nullsoft
+  UpgradeBehavior: install
 ShortDescription: DMM player is an app which play videos buy through DMM.com or FANZA
-PackageLocale: en-US
+PackageLocale: ja-JP
 ManifestType: singleton
 ManifestVersion: 1.0.0
