Add version: KDE.KDEConnect version 21.08.2

--- a/manifests/k/KDE/KDEConnect/21.08.2/KDE.KDEConnect.locale.en-US.yaml
+++ b/manifests/k/KDE/KDEConnect/21.08.2/KDE.KDEConnect.locale.en-US.yaml
@@ -1,13 +1,22 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.5-1-19041-1320
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
+
 PackageIdentifier: KDE.KDEConnect
-PackageVersion: 21.08.2.760
+PackageVersion: 21.08.2
 PackageLocale: en-US
 Publisher: KDE e.V.
+# PublisherUrl: 
+# PublisherSupportUrl: 
+# PrivacyUrl: 
+# Author: 
 PackageName: KDE Connect
 PackageUrl: https://kdeconnect.kde.org/
 License: GNU GPLv2/GNU GPLv3
 LicenseUrl: https://www.gnu.org/licenses/gpl-2.0.html
+# Copyright: 
+# CopyrightUrl: 
 ShortDescription: Enabling communication between all your devices. Made for people like you.
+# Description: 
 Moniker: kdeconnect
 Tags:
 - android
@@ -17,4 +26,3 @@ Tags:
 - k
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
-
