--- a/manifests/k/KDE/KDEConnect/21.08.2/KDE.KDEConnect.installer.yaml
+++ b/manifests/k/KDE/KDEConnect/21.08.2/KDE.KDEConnect.installer.yaml
@@ -1,6 +1,8 @@
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.5-1-19041-1320
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
+
 PackageIdentifier: KDE.KDEConnect
-PackageVersion: 21.08.2.760
+PackageVersion: 21.08.2
 InstallerLocale: en-US
 MinimumOSVersion: 10.0.0.0
 InstallerType: nullsoft
@@ -20,4 +22,3 @@ Installers:
     Custom: /CURRENTUSER
 ManifestType: installer
 ManifestVersion: 1.0.0
-
